<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hand"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="58dp"
        android:layout_weight="0.6"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textview_wireless_function_name"
            style="@style/fontStyle_white_66dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="75dp"
            android:gravity="center"
            android:text="@string/connect_wireless_name" />

        <TextView
            android:id="@+id/textview_wirless_ssid"
            style="@style/fontStyle_white_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/network_color"
            android:gravity="center"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edittext_password"
            style="@style/fontStyle_white_20dp"
            android:layout_width="363dp"
            android:layout_height="41dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/password_input"
            android:hint="@string/input_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColorHint="#979daa"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_connect"
            style="@style/fontStyle_white_30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_statue_grav_green"
            android:gravity="center"
            android:text="@string/connect"
            android:visibility="gone" />
    </LinearLayout>

    <ListView
        android:id="@+id/listview_wireless"
        android:layout_width="800dp"
        android:layout_height="310dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="1"
        android:divider="@drawable/seperate_line"
        android:dividerHeight="2dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:listSelector="@drawable/test_button_statue_tran_green"
        android:nextFocusDown="@+id/button_wireless_cancel" >
    </ListView>

    <TextView
        android:id="@+id/textview_open_wifi"
        style="@style/fontStyle_white_20dp"
        android:layout_width="800dp"
        android:layout_height="310dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/opening_wifi"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="20dp"
        android:layout_weight="0.6"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_wireless_cancel"
            style="@style/fontStyle_white_30dp"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:background="@drawable/button_statue_tran_green"
            android:gravity="center"
            android:text="@string/cancel"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_wireless_jump"
            style="@style/fontStyle_white_30dp"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:background="@drawable/button_statue_tran_green"
            android:gravity="center"
            android:text="@string/jump"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textview_a"
                style="@style/fontStyle_white_20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/a"
                android:gravity="center"
                android:text="@string/sure" />

            <TextView
                android:id="@+id/textview_b"
                style="@style/fontStyle_white_20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@drawable/b"
                android:gravity="center"
                android:text="@string/cancel" />

            <TextView
                android:id="@+id/textview_x"
                style="@style/fontStyle_white_20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@drawable/x"
                android:gravity="center"
                android:text="@string/jump" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>