<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/hand" >

    <AbsoluteLayout
        android:id="@+id/AbsoluteLayout1_hand_backgroud"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/hand_backgroud" >
  
        <ImageView
            android:id="@+id/box"
            android:layout_width="340dp"
            android:layout_height="399dp"
            android:layout_x="183dp"
            android:layout_y="139dp"
            android:src="@drawable/box"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/hander"
            android:layout_width="421dp"
            android:layout_height="275dp"
            android:layout_x="664dp"
            android:layout_y="261dp"
            android:src="@drawable/handler"
            android:visibility="visible" />
        
        
        <ImageView
            android:id="@+id/hander_connecting"
            android:layout_width="421dp"
            android:layout_height="336dp"
            android:layout_x="426dp"
            android:layout_y="190dp"
            android:src="@drawable/handler_connecting"
            android:visibility="gone" />
            
   

<!--  
        <ImageView
            android:id="@+id/image_home_line"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_x="930dp"
            android:layout_y="284dp"
            android:src="@drawable/home_line"
            android:visibility="gone" />
      -->
<!--  
        <Button
            android:id="@+id/button_hand_jump"
            style="@style/fontStyle_white_30dp"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_x="453dp"
            android:layout_y="550dp"
            android:background="@drawable/button_statue_tran_green"
            android:gravity="center"
            android:text="@string/jump"
            android:visibility="gone" />
            
     -->

        <TextView
            android:id="@+id/textview_hand_title"
            style="@style/fontStyle_white_66dp"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_x="75dp"
            android:layout_y="58dp"
            android:gravity="center"
            android:text="@string/hand" />

        <TextView
            android:id="@+id/textview_noti"
            style="@style/fontStyle_white_20dp"
            android:layout_width="473dp"
            android:layout_height="160dp"
            android:layout_x="645dp"
            android:layout_y="535dp"
            android:gravity="center"
            android:text="@string/noti"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textview_noti_connecting"
            style="@style/fontStyle_green_30dp"
            android:layout_width="458dp"
            android:layout_height="120dp"
            android:layout_x="409dp"
            android:layout_y="518dp"
            android:gravity="center"
            android:text="@string/noti_connecting"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imageView_arrow_down"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_x="806dp"
            android:layout_y="260dp"
            android:src="@drawable/arrow_down"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/imageView_arrow_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="352dp"
            android:layout_y="470dp"
            android:src="@drawable/arrow_up"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/image_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="605dp"
            android:layout_y="275dp"
            android:src="@drawable/home"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imageview_line"
            android:layout_width="740dp"
            android:layout_height="506dp"
            android:layout_x="243dp"
            android:layout_y="152dp"
            android:src="@drawable/line"
            android:visibility="visible" />

    </AbsoluteLayout>

</FrameLayout>